completed missing_values step

--- a/Preprocessing-Workflow.ipynb
+++ b/Preprocessing-Workflow.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "4          RFn          Y       bricks      12     250000  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "tags": [
      "challengify"
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "tags": [
      "challengify"
@@ -251,8 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "data.drop_duplicates(inplace=True)\n"
+    "data.drop_duplicates(inplace = True)"
    ]
   },
   {
@@ -264,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +282,7 @@
       "test_duplicates.py::TestDuplicates::test_dataset_length \u001b[32mPASSED\u001b[0m\u001b[32m           [ 50%]\u001b[0m\n",
       "test_duplicates.py::TestDuplicates::test_duplicate_count \u001b[32mPASSED\u001b[0m\u001b[32m          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.42s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.64s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {
     "tags": [
      "challengify"
@@ -337,12 +336,12 @@
      "output_type": "stream",
      "text": [
       "Percentage of missing values for each column:\n",
+      "GarageFinish    0.055479\n",
+      "RoofSurface     0.006164\n",
       "GrLivArea       0.000000\n",
       "BedroomAbvGr    0.000000\n",
       "KitchenAbvGr    0.000000\n",
       "OverallCond     0.000000\n",
-      "RoofSurface     0.616438\n",
-      "GarageFinish    5.547945\n",
       "CentralAir      0.000000\n",
       "ChimneyStyle    0.000000\n",
       "MoSold          0.000000\n",
@@ -353,7 +352,9 @@
    ],
    "source": [
     "\n",
-    "missing_percentage = data.isnull().mean() * 100\n",
+    "missing_percentage = data.isnull().sum().sort_values(ascending=False)/len(data)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "print(\"Percentage of missing values for each column:\")\n",
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "tags": [
      "challengify"
@@ -403,7 +404,7 @@
    },
    "outputs": [],
    "source": [
-    "# Replacing missing values in 'GarageFinish' with \"NoGarage\"\n",
+    "\n",
     "data['GarageFinish'].fillna('NoGarage', inplace=True)\n"
    ]
   },
@@ -442,15 +443,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2889.])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# Instantiate a SimpleImputer object with your strategy of choice\n",
+    "imputer = SimpleImputer(strategy=\"median\") \n",
+    "\n",
+    "# Call the \"fit\" method on the object\n",
+    "imputer.fit(data[['RoofSurface']]) \n",
+    "\n",
+    "# Call the \"transform\" method on the object\n",
+    "data['RoofSurface'] = imputer.transform(data[['RoofSurface']]) \n",
+    "\n",
+    "# The mean is stored in the transformer's memory\n",
+    "imputer.statistics_ \n"
    ]
   },
   {
@@ -492,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "tags": [
      "challengify"
@@ -500,7 +524,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "data.drop(columns='ChimneyStyle', inplace=True)"
    ]
   },
   {
